--- a/application.yml
+++ b/application.yml
@@ -19,6 +19,7 @@ redshift_conf:
   filetype: csv
   delimiter: |
   dbtable: PUBLIC.TXN_FCT
+  dbtablewrt: PUBLIC.TXN_FCT_WRT
   query: SELECT txn_id, create_time, amount, cust_id from PUBLIC.TXN_FCT
 
 spark_sql_demo:
